@@ -1,4 +1,5 @@
 Development
+	Add WEBM types to plugin
 	Handle nocache=1 better
 	Mark asx files with ENTRY in them as non-playable
 	Allow separate cache sizes for audio or video data, depends on mimetype identification
